# tessToPy

./: LICENSE.md  MANIFEST.in  README.md  setup.cfg  tessellations.py
tessToPy/: __init__.py  absdict.py  geometry.py  original_tessellation_processing.py  tessIO.py  tessellation.py  tessellations.py
tessToPy.egg-info/: PKG-INFO
tests/: test_geometry.py  test_tessellation.py
tests/tess_files/: n10-id1.tess  n400_from_morpho-id1.tess
