[metadata]
name = tessToPy
version = 0.0
description = My package description
long_description = file: README.md,  LICENSE.md
keywords = tessellation, voronoi, laguerre, periodic, regularized
license = MIT
classifiers =
    Programming Language :: Python :: 3.7


[options]
install_requires =
    matplotlib >= 3.3.4
    numpy >= 1.20.1
    scipy >=1.6.1